avoid scrollbar in popup modal with Firefox

--- a/css/oxipay-branding.scss
+++ b/css/oxipay-branding.scss
@@ -55,7 +55,7 @@ div[id^="oxipay-modal-"] {
 
 #oxipay-external {
     width: 100%;
-    height: 706px;
+    height: 725px;
     max-height: 80vh;
     border: none;
 }
@@ -424,6 +424,12 @@ div[id^="oxipay-modal-"] {
 
 #oxipay-modal-more-info_1 {
     background-color: #515565;
+    .remodal-close {
+        color: white;
+        &:hover {
+            color: #2b2e38;
+        }
+    }
 }
 
 .more-info-btn {
