--- a/src/au/styles/MoreInfo-modal.scss
+++ b/src/au/styles/MoreInfo-modal.scss
@@ -105,7 +105,7 @@ div[id^="oxipay-modal-"] {
             width: 33%;
             float: left;
             text-align: center;
-            padding: 0 0.5rem;
+            padding: 0 0.6rem;
             box-sizing: border-box;
             img {
                 width: 56%;
